need to reduce size

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
         "@openzeppelin/contracts": "^4.4.2",
         "@openzeppelin/contracts-upgradeable": "^4.5.2",
         "@openzeppelin/hardhat-upgrades": "^1.16.1",
+        "hardhat-contract-sizer": "^2.5.1",
         "treasure-staking": "https://github.com/ghoul-sol/treasure-staking"
     }
 }
